@@ -1,5 +1,7 @@
 2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>
 
+	* headers.m4: Link files into `sysroot/include/' instead of `include/'.
+
 	* tests/Makefile.am (noinst_PROGRAMS): Rename to...
 	(check_PROGRAMS): ... this.
 	(AM_CPPFLAGS): Set to $(CHECK_CPPFLAGS).
